add authn/authz(RBAC) logic, generate token API
